--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title> Yash Khatri | Geek</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Yash</span>
           <br />
-          I'm the Unknown Developer.
+          MasterMind in Progress!
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +79,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                Hungry to learn! Every problem has a logical solution, and that logic is exactly what i thrive for. On my journey to learn many different aspects which includes 'full stack developer','tensorflow developer' and many more to come. 
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Rest of my time would be caught up by shows and social media. A routine to hit the gym, play basketball and finally a good sleep.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -92,7 +91,7 @@
                   class="cta-btn cta-btn--resume"
                   href="assets/resume.pdf"
                 >
-                  View Resume
+                  Download Resume
                 </a>
               </span>
             </div>
@@ -112,37 +111,29 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Face-Detector</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    An interactive react app which detects the face present in an image. Begins with a signin/register page for the user. 
+                    Each email is treated as a unique email to prevent repetition. Followed by a page where the user enters their jpg url
+                    of the face which then updates the score of the user. Created various components for ease of understanding.
+                    Used clarifai face detection model. For the backend nodejs and expressjs were used. The api was connected to the database using knexjs.
+                    All the 3 different areas (frontend, backend and database) were uploaded on git and heroku was used to make the site go live.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://smart-face-brain-31.herokuapp.com/"
                 >
                   See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="assets/facedetector.png" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -153,50 +144,27 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/facedetector.png"
                     />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
-
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Deep Learning</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
+                    Worked with Tensorflow to create multiple Machine Learning/Deep Learning Models to make predictions. Worked with Time Series and NLP problems. Practiced with MSNIT, Pubmed-RCT, twitter and many datasets to enhance my skills. A detailed description of these projects is available in the resume.
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" src = "assets/Timeseries.png" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -207,34 +175,30 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/Timeseries.png"
                     />
                   </div>
                 </a>
               </div>
             </div>
-          </div>
-          <!-- /END Project -->
-
+          </div>  
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Gradient Generator</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Used HTML, CSS and Javascript to create a site where we can choose two different colours and see how 
+                    the background gradient looks. A button to randomize the colour selector and see many new possibilities of the background.
+                    Provides the linear gradient so that it can be used for your own project.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://yash-khatri-31.github.io/Gradient_Generator/"
                 >
                   See Live
                 </a>
@@ -242,7 +206,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Yash-Khatri-31/Gradient_Generator"
                 >
                   Source Code
                 </a>
@@ -250,7 +214,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" src = "assets/project1.png" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -261,40 +225,39 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project1.png"
                     />
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <!-- /END Project -->
         </div>
       </div>
     </section>
     <!-- /END Projects Section -->
 
     <!-- **** Contact Section **** -->
-    <section id="contact">
+    <!-- <section id="contact">
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">You can mail me HERE!</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="mailto:yashr124@gmail.com"
             >Call to Action</a
           >
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- /END Contact Section -->
 
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
-      <div class="container">
+      <!-- <div class="container">
         <a rel="noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
@@ -308,7 +271,7 @@
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-        </div>
+        </div> -->
 
         <hr />
 
@@ -321,7 +284,7 @@
         </p>
 
         <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
+        <!-- <p class="mt-3 pt-3">
           <a
             rel="noreferrer"
             class="github-button"
@@ -342,7 +305,7 @@
             aria-label="Star cobidev/simplefolio on GitHub"
             >Star</a
           >
-        </p>
+        </p> -->
       </div>
     </footer>
     <!-- /END Footer Section -->
