--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/111119140.pdf"
                 >
                   Download Resume
                 </a>
