--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,9 @@
                 <h3 class="project-wrapper__text-title">Deep Learning</h3>
                 <div>
                   <p class="mb-4">
-                    Worked with Tensorflow to create multiple Machine Learning/Deep Learning Models to make predictions. Worked with Time Series and NLP problems. Practiced with MSNIT, Pubmed-RCT, twitter and many datasets to enhance my skills. A detailed description of these projects is available in the resume.
+                    Worked with Tensorflow and keras to create multiple Deep Learning Models of various practice Datasets such as Food Vision 101, Boston Pricing,
+                    PubMED-RCT 200k, Twitter tweets and many more. Explored the various possible combinations of layers added with Feature Engineering and Fine Tuning
+                    to enhance a pretrained Model such as ResNet and EfficinetNet. End result was to reach the best accuracy of the models with low loss function.
                 </div>
               </div>
             </div>
