--- a/src/index.html
+++ b/src/index.html
@@ -240,40 +240,37 @@
     <!-- /END Projects Section -->
 
     <!-- **** Contact Section **** -->
-    <!-- <section id="contact">
+    <section id="contact">
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">You can mail me HERE!</p>
+          <p class="contact-wrapper__text">Get in touch with mex!</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:yashr124@gmail.com"
-            >Call to Action</a
+            >Mail</a
           >
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- /END Contact Section -->
 
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
-      <!-- <div class="container">
+      <div class="container">
         <a rel="noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/yashkhatri31" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/Yash-Khatri-31" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-        </div> -->
+        </div>
 
         <hr />
 
