--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,9 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Hungry to learn! Every problem has a logical solution, and that logic is exactly what i thrive for. On my journey to learn many different aspects which includes 'full stack developer','tensorflow developer' and many more to come. 
+                Hungry to learn! Every problem has a logical solution,
+                and that logic is exactly what i thrive for. On my journey to learn many different aspects which includes
+                'Machine Learning','Deep Learning','Data Analytics' and many more to come. 
               </p>
               <p class="about-wrapper__info-text">
                 Rest of my time would be caught up by shows and social media. A routine to hit the gym, play basketball and finally a good sleep.
@@ -89,7 +91,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/111119140.pdf"
+                  href="assets/Yash_Khatri_Resume.pdf"
                 >
                   Download Resume
                 </a>
@@ -244,7 +246,7 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">Get in touch with mex!</p>
+          <p class="contact-wrapper__text">Get in touch with me!</p>
           <a
             rel="noreferrer"
             target="_blank"
