added web stuff

--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,7 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 Hungry to learn! Every problem has a logical solution,
-                and that logic is exactly what i thrive for. On my journey to learn many different aspects which includes
-                'Machine Learning','Deep Learning','Data Analytics' and many more to come. 
+                and that logic is exactly what i thrive for. On my journey to learn Machine Learning and Web Developer aspects to a deeper level and improve my skills.
               </p>
               <p class="about-wrapper__info-text">
                 Rest of my time would be caught up by shows and social media. A routine to hit the gym, play basketball and finally a good sleep.
