added new details and updated resume

--- a/src/index.html
+++ b/src/index.html
@@ -80,10 +80,10 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 Hungry to learn! Every problem has a logical solution,
-                and that logic is exactly what i thrive for. On my journey to learn Machine Learning and Web Developer aspects to a deeper level and improve my skills.
+                and that logic is exactly what i thrive for. On my journey to becoming a Full Stack Developer and a Deep Learning Computer Vision Engineer and understand to a deeper level to improve my skills.
               </p>
               <p class="about-wrapper__info-text">
-                Rest of my time would be caught up by shows and social media. A routine to hit the gym, play basketball and finally a good sleep.
+                Rest of my time would be caught up by shows, social media and a competetive gamer. A routine to stay fit, stay athletic by playing basketball and finally a good sleep.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -130,6 +130,14 @@
                 >
                   See Live
                 </a>
+                <a
+                rel="noreferrer"
+                target="_blank"
+                class="cta-btn text-color-main"
+                href="https://github.com/Yash-Khatri-31/facedetector_api"
+              >
+                Source Code
+              </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -152,6 +160,52 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Nasa Project</h3>
+                <div>
+                  <p class="mb-4">
+                    Created a React app where the user enters details to initiate a launch to a planet in the coming future.
+                    We used Kepler’s data from NASA Exoplanet Archive. Using express we parsed the csv file and created a readable
+                    stream where we processed on the data to filter out the exoplanets based on certain criteria.
+                    Applied the MVC framework, created separate folders for the model, controller, and routes.
+                    Created APIs’ which were responsible for getting the launches from the frontend and storing them in the server side variable.
+                    Other API was dedicated for deleting the launches if they were cancelled by the user and adding them into the history page.
+                    With the help of postman, we first confirmed the working of each API by hard coding details.
+                    Later, used the details from frontend to make the require changes. Used GET, POST, and DELETE methods for this project.
+                  </p>
+                </div>
+                <a
+                rel="noreferrer"
+                target="_blank"
+                class="cta-btn text-color-main"
+                href="https://github.com/Yash-Khatri-31/nasa_project"
+              >
+                Source Code
+              </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="assets/nasaproject.jpeg" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/nasaproject.jpeg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -161,7 +215,9 @@
                   <p class="mb-4">
                     Worked with Tensorflow and keras to create multiple Deep Learning Models of various practice Datasets such as Food Vision 101, Boston Pricing,
                     PubMED-RCT 200k, Twitter tweets and many more. Explored the various possible combinations of layers added with Feature Engineering and Fine Tuning
-                    to enhance a pretrained Model such as ResNet and EfficinetNet. End result was to reach the best accuracy of the models with low loss function.
+                    to enhance a pretrained Model such as ResNet and EfficinetNet with an end result to reach the best accuracy of the models with low loss function.
+                    Created state of the art SSDs and GANs. Applied them on custom data to see the efficiency of the algoirthm.
+                    Conducted Neural Style Transfer based on the loss functions to get the desired output.
                 </div>
               </div>
             </div>
