--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title> Yash Khatri | Geek</title>
+    <title> Yash Khatri | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Yash</span>
           <br />
-          MasterMind in Progress!
+          The Mind you Need!
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -80,10 +80,10 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 Hungry to learn! Every problem has a logical solution,
-                and that logic is exactly what i thrive for. On my journey to becoming a Full Stack Developer and a Deep Learning Computer Vision Engineer and understand to a deeper level to improve my skills.
+                and that logic is exactly what i thrive for. On my journey to becoming a Full Stack Developer and a Deep Learning Computer Vision Engineer. Aiming to improve and make a change.
               </p>
               <p class="about-wrapper__info-text">
-                Rest of my time would be caught up by shows, social media and a competetive gamer. A routine to stay fit, stay athletic by playing basketball and finally a good sleep.
+                Rest of my time would be caught up by shows, social media and a competetive gamer. A routine to stay fit in the gym, stay athletic by playing basketball and always trying to improve.
               </p>
               <span class="d-flex mt-3">
                 <a
